--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "J.M. Shawn Hutchinson"
 title_separator          : "-"
-subtitle                 : "Geography and Geospatial Sciences"
+subtitle                 : "Geography and Geospatial Sciences, Kansas State University"
 name                     : "Shawn Hutchinson"
 description              : "Professor of Geography and Director of the Geographic Information Systems Spatial Analysis Laboratory at Kansas State University."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/hutchinson_github.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
