--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
     url: https://mmistakes.github.io/minimal-mistakes/about/
   - title: "GISSAL"
     url: https://www.ksu.edu/gissal
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
+  - title: "K-State Geography"
+    url: https://www.ksu.edu/geography
   # - title: "Sitemap"
   #   url: /sitemap/
