--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: "About Me"
     url: https://storymaps.arcgis.com/stories/196b2b5906c3494eb47d6ef0e0a1ad8d
-  - title: "My CV"
+  - title: "Short CV"
     url: /assets/docs/shutch_cv2.pdf
   - title: "GISSAL"
     url: https://www.ksu.edu/gissal
