--- a/_config.yml
+++ b/_config.yml
@@ -115,10 +115,13 @@ author:
       url: "mailto:shutch@ksu.edu"
     - label: "Department Website"
       icon: "fas fa-fw fa-link"
-      url: "https://www.ksu.edu/geography"
+      # url: "https://www.ksu.edu/geography"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/jmshutch"
+      # url: "https://github.com/jmshutch"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/shawnhutchinson/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/gissal"
