--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "J.M. Shawn Hutchinson"
 title_separator          : "-"
-subtitle                 : "Geography and Geospatial Sciences, Kansas State University"
+subtitle                 : "University educator, researcher, and academic program director"
 name                     : "Shawn Hutchinson"
 description              : "Professor of Geography and Director of the Geographic Information Systems Spatial Analysis Laboratory at Kansas State University."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -118,10 +118,16 @@ author:
       # url: "https://www.ksu.edu/geography"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/jmshutch"
+      url: "https://github.com/jmshutch"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/shawnhutchinson/"
+    - label: "Google Scholar"
+      icon: "fab fa-fw fa-google"
+      url: "https://scholar.google.com/citations?user=LyViW1UAAAAJ&hl=en"
+    - label: "ResearchGate"
+      icon: "fab fa-fw fa-researchgate"
+      url: "https://www.researchgate.net/profile/J-Hutchinson"      
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/gissal"
@@ -135,6 +141,9 @@ author:
 # Site Footer
 footer:
   links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "http://www.github.com/jmshutch"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/shawnhutchinson/"
@@ -150,9 +159,6 @@ footer:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "http://www.github.com/jmshutch"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
