--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 # main links
 main:
-  - title: "About Me"
+  - title: "My Persona StoryMap"
     url: https://storymaps.arcgis.com/stories/196b2b5906c3494eb47d6ef0e0a1ad8d
+  - title: "Biographical Sketch"
+    url: /about.md
   - title: "Short CV"
     url: /assets/docs/shutch_cv2.pdf
   - title: "GISSAL"
