--- a/_config.yml
+++ b/_config.yml
@@ -305,7 +305,9 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
+        provider: "disqus"
+        disqus: "jmshutch"
       share: true
       related: true
   # _pages
