--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,13 +2,13 @@
 main:
   - title: "My StoryMap"
     url: https://storymaps.arcgis.com/stories/196b2b5906c3494eb47d6ef0e0a1ad8d
-  - title: "Biosketch"
-    url: /about
-  - title: "Short CV"
+  - title: "My Short CV"
     url: /assets/docs/shutch_cv2.pdf
-  - title: "GISSAL"
+  - title: "My Biosketch"
+    url: /about
+  - title: "My Research Lab"
     url: https://www.ksu.edu/gissal
-  - title: "Posts"
+  - title: "My Posts"
     url: /year-archive/
   # - title: "K-State Geography"
   #   url: https://www.ksu.edu/geography
