--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ author:
       url: "https://www.researchgate.net/profile/J-Hutchinson"      
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/gissal"
+      url: "https://twitter.com/kstate_gissal"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
@@ -155,7 +155,7 @@ footer:
       url: "https://www.researchgate.net/profile/J-Hutchinson"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://www.twitter.com/jmshutch"
+      url: "https://www.twitter.com/kstate_gissal"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
