--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "J.M. Shawn Hutchinson"
+title                    : "J.M. Shawn Hutchinson, PhD, GISP"
 title_separator          : "-"
 subtitle                 : "University Educator, Researcher, and Academic Program Leader"
 name                     : "Shawn Hutchinson"
