--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ author:
       url: "https://twitter.com/kstate_gissal"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: "https://www.facebook.com/100062304444463"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -158,7 +158,7 @@ footer:
       url: "https://www.twitter.com/kstate_gissal"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      url: "https://www.facebook.com/profile.php?id=100062304444463"
+      url: "https://www.facebook.com/100062304444463"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
