--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "J.M. Shawn Hutchinson, PhD, GISP"
 title_separator          : "-"
-subtitle                 : "University Professor, Academic Program Leader, and Geospatial Specialist"
+subtitle                 : "Geospatial Specialist, University Educator, and Academic Program Leader"
 name                     : "Shawn Hutchinson"
 description              : "Professor of Geography and Director of the Geographic Information Systems Spatial Analysis Laboratory at Kansas State University."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
