--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Shawn Hutchinson"
   avatar           : "/assets/images/hutchinson_github.jpg"
-  bio              : "Professor of Geography and Director, Geographic Information Systems Spatial Analysis Laboratory and Institute for Digital Agriculture and Advanced Analytics at Kansas State University."
+  bio              : "Professor of Geography, Director, Geographic Information Systems Spatial Analysis Laboratory, and Co-Director, Institute for Digital Agriculture and Advanced Analytics at Kansas State University."
   location         : "Manhattan, Kansas"
   email            :
   links:
