--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   name             : "Shawn Hutchinson"
   avatar           : "/assets/images/hutchinson_github.jpg"
   bio              : "Professor of Geography, Director, Geographic Information Systems Spatial Analysis Laboratory, and Co-Director, Institute for Digital Agriculture and Advanced Analytics at Kansas State University."
-  location         : "Manhattan, Kansas"
+  location         : "Manhattan, Kansas, USA"
   email            :
   links:
     - label: "Email"
